2008-01-13 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_export.c: add export template for mp4 files.

	  src/prefs.c: remove references to export_template which
	  wasn't used. Thanks to Todd to point out both.

2008-01-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* data/gtkpod.glade: add property "translatble=yes" to the check
	  button "generate_video_thumbnails". Thanks to Eric.
	  
2008-01-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* configure.in
	  src/mp4file.c: Adding support for MP4V2 2.0_20081129 without
	  losing support for older versions of MP4V2 from the mpeg4ip
	  line. Thanks to William Hardeman.

2008-01-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c: correct programming error when determining offset
	  of the LAME tag. Thanks to <Anonymous> for submitting tracker
	  #2490479.

2009-01-04  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in,	data/man/gtkpod.1 -> data/man/gtkpod.1.in:
	Update man page and generate it to set the version properly.

	* po/zh_CN.po: Add simple Chinese translation (Tan Zhixin)

2008-12-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file.c
	  src/help.c
	  data/gtkpod.glade: string corrections -- thanks to Daniele Forsi.

2008-12-15 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* po/es.po: Spanish translation updated -- thanks to Alejandro
	  Lamas Daviña

2008-12-17  Daniele Forsi <dforsi at users.sourceforge.net>

        * po/it.po: Italian translation updated

2008-12-16  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/misc_confirm.c: Fix typo in ok_to_close_gtkpod dialog

2008-12-15  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* data/man/gtkpod.1
	  src/prefs.c: Remove -a/--auto from usage output and manpage
	  These options were removed long ago in svn rev 1070.  Thanks
	  to Frank Lichtenheld (in Debian bug #466127).

2008-12-15 Jorg Schuler <jcsjcs at users.sourceforge.net>
