@@ -5,6 +5,9 @@
 	  src/prefs.c: remove references to export_template which
 	  wasn't used. Thanks to Todd to point out both.
 
+	* src/confirmation.c
+	  src/misc_confirm.c: cleanup indentation
+
 2008-01-11 Jorg Schuler <jcsjcs at users.sourceforge.net>
 
 	* data/gtkpod.glade: add property "translatble=yes" to the check
